--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "objectionjs-relationship",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "ObjectionJs Relationship facade to make relationship mapper more easier",
   "source": "src/index.ts",
   "main": "lib/index.js",
@@ -10,7 +10,7 @@
     "test": "jest",
     "doc": "typedoc --out docs src/index.ts",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test",
+    "prepublishOnly": "npm test && npm run build",
     "version": "git add -A src",
     "postversion": "git push && git push --tags"
   },
@@ -30,6 +30,10 @@
     "type": "git",
     "url": "git+https://github.com/valiulab-core/objectionjs-relationship.git"
   },
+  "bugs": {
+    "url": "https://github.com/valiulab-core/objectionjs-relationship/issues"
+  },
+  "homepage": "https://github.com/valiulab-core/objectionjs-relationship#readme",
   "files": [
     "lib/**/*"
   ],
