--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "objectionjs-relationship",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "ObjectionJs Relationship facade to make relationship mapper more easier",
   "source": "src/index.ts",
   "main": "lib/index.js",
@@ -24,7 +24,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "objection": "^3.0.1"
+    "objection": "github:ralcorta/objection.js"
   },
   "repository": {
     "type": "git",
