--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.5.1",
+    "@types/underscore": "^1.11.4",
     "jest": "^28.1.0",
     "ts-jest": "^28.0.3",
     "typedoc": "^0.22.15",
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "objection": "github:ralcorta/objection.js"
+    "objection": "github:ralcorta/objection.js",
+    "underscore": "^1.13.4"
   },
   "repository": {
     "type": "git",
