--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "objectionjs-relationship",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "ObjectionJs Relationship facade to make relationship mapper more easier",
   "source": "src/index.ts",
   "main": "lib/index.js",
@@ -8,26 +8,33 @@
   "scripts": {
     "build": "npx tsc",
     "test": "jest",
-    "doc": "typedoc --theme oxide --name 'Objectionjs Relationship' --out docs src/index.ts",
+    "doc": "typedoc --name 'Objectionjs Relationship' --out docs src/index.ts",
     "prepare": "npm run build",
+    "prebuild": "rimraf lib",
     "prepublishOnly": "npm test && npm run build",
     "version": "git add -A src",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "prettier": "prettier 'src/**/*.{ts,tsx,js,md,css}'",
+    "prettier:fix": "prettier --write 'src/**/*.{ts,tsx,js,md,css}'"
   },
   "author": "ValiuLab",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^27.5.1",
+    "@types/jest": "^29.5.14",
     "@types/underscore": "^1.11.4",
-    "jest": "^28.1.0",
-    "ts-jest": "^28.0.3",
-    "typedoc": "^0.22.17",
-    "typescript": "^4.6.4"
+    "jest": "^29.7.0",
+    "prettier": "^3.4.2",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.5",
+    "typedoc": "^0.27.6",
+    "typescript": "^5"
   },
   "dependencies": {
-    "objection": "github:ralcorta/objection.js",
-    "typedoc-theme-oxide": "^0.1.6",
     "underscore": "^1.13.4"
+  },
+  "peerDependencies": {
+    "knex": "^2.0.0",
+    "objection": "^3.1.5"
   },
   "repository": {
     "type": "git",
