--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "objectionjs-relationship",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "ObjectionJs Relationship facade to make relationship mapper more easier",
   "source": "src/index.ts",
   "main": "lib/index.js",
@@ -34,7 +34,7 @@
   },
   "peerDependencies": {
     "knex": "^2.0.0",
-    "objection": "^3.1.5"
+    "objection": "github:valiulab/objection.js"
   },
   "repository": {
     "type": "git",
